# Altiora-Digital-Labs

./: README.md  compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_engine_schema.py  0003_admin_module.py  0004_india_prd.py  0005_prd_normalization.py  0006_normalize_card_benefits.py
backend/app/: __init__.py  config.py  error_handlers.py  exceptions.py  logging_config.py  main.py
backend/app/api/: __init__.py  admin_deps.py  deps.py  router.py
backend/app/core/: __init__.py  security.py
backend/app/database/: __init__.py  base.py  seed.py  session.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  activity_log.py  admin_user.py  associations.py  bank.py  benefit.py  card.py  category.py  eligibility_rule.py  faq.py  question.py  refresh_token.py  reward_category.py  reward_rate.py  rule.py  scoring.py  setting.py
backend/app/recommendation_engine/: __init__.py  engine.py  loader.py  operators.py  scoring.py  types.py
backend/app/repositories/: __init__.py  activity_repository.py  admin_user_repository.py  bank_repository.py  card_repository.py  category_repository.py  faq_repository.py  question_repository.py  rule_repository.py  setting_repository.py
backend/app/schemas/: __init__.py  auth.py  bank.py  card.py  category.py  (+9 more)
backend/docs/: FOLDER_STRUCTURE.md  LOCAL_DEVELOPMENT.md
(+193 files in other folders)
