[project]
name = "cardwise-api"
version = "1.0.0"
description = "Database-driven credit card recommendation API (FastAPI + SQLAlchemy)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic.

[tool.ruff.lint.per-file-ignores]
# Migrations are historical artifacts and seed/test fixtures favor readable data.
"alembic/versions/*.py" = ["E501"]
"app/database/seed.py" = ["E501"]
"app/tests/*.py" = ["E501"]
# SQLAlchemy resolves these forward references after TYPE_CHECKING-only imports.
"app/models/*.py" = ["UP037"]
"app/recommendation_engine/types.py" = ["UP037"]
